--- a/3-promo/index.html
+++ b/3-promo/index.html
@@ -59,8 +59,17 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
          padding-right: 30px  !important;
       }
 
+      .mobile-content-p0с {
+         padding-left: 10px  !important;
+      }
+
       .mobile-content-p20b {
         
+      }
+
+      .mobile-content-p0d {
+         width: 100% !important;
+         padding-left: 10px  !important;
       }
 
 
@@ -106,6 +115,10 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
       .content-left,
       .content-right {
         width: 100% !important
+      }
+
+      .mobile-content-p0d {
+         width: 100% !important;
       }
 
       .content table,
@@ -238,14 +251,12 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
              <!--Шапка с текстом и картинкой справа-->
-             <!--закомментировано
             <table bgcolor="#F6F6F6" class="content-body" align="center" cellpadding="0" cellspacing="0" 
             style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#F6F6F6;width:600px;">
               <tr>
                 <td align="left" bgcolor="#FF4B33" style="padding:0;Margin:0;background-color:#FF4B33; border-radius: 15px 15px 0px 0px;">
                   <!--[if mso]><table style="width:600px" cellpadding="0"
                     cellspacing="0"><tr><td style="width:298px" valign="top"><![endif]-->
-                      <!--закомментировано
                   <table cellpadding="0" cellspacing="0" class="content-left" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left; ">
                     <tr>
                       <td align="left" style="padding:0;Margin:0;width:240px; ">
@@ -288,7 +299,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     </tr>
                   </table>
                   <!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
-                    <!--закомментировано
                   <table cellpadding="0" cellspacing="0" class="content-right" align="right" 
                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;">
                     <tr>
@@ -304,7 +314,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     </tr>
                   </table>
                   <!--[if mso]></td></tr></table><![endif]-->
-                  <!--закомментировано
                 </td>
               </tr>
             </table>
@@ -529,7 +538,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
            <!--Пустая таблица-разделитель между блоками-->
-           <!--закомментировано
            <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
                 bgcolor="#F6F6F6" style="padding-top: 20px; padding-bottom: 20px; padding-right: 0px; ">
            </table>
@@ -547,23 +555,22 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
             <!--Отзыв о курсе-->
-            <!--закомментировано
-            <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
+            <table cellpadding="0" cellspacing="0" border="0"  align="center" width="600" 
                 bgcolor="#ffffff" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; ">
                 <tr>
-                   <td align="center" 
-                       style="padding:0;Margin:0;padding-top:0px; padding-bottom: 0px;">
-                     <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/%D1%84%D0%BE%D1%82%D0%BE.png" alt="Анна" title="Анна" width="120" height="120" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/>
+                   <td align="center" class="content-left" width="150"
+                       style="padding:0;Margin:0;padding-top:0px; padding-bottom: 0px;  float:left; ">
+                     <img  src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/%D1%84%D0%BE%D1%82%D0%BE.png" alt="Анна" title="Анна" width="120" height="120" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/>
                      <p style="Margin:0;padding-top:8px; -webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#000000;"> Анна </p>
                    </td>
 
-                  <td  align="left" 
-                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 20px; padding-left: 16px;">
-                    <p
-                      style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:19px;color:#13D6C3; padding-bottom: 17px;">
+                  <td  align="left" class="content-right" width="400"
+                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px; float:right; ">
+                    <p class="mobile-content-p0d"
+                      style="Margin:0;padding-top:15px;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:19px;color:#13D6C3; padding-bottom: 0px;">
                       Очень понравился курс!</p>
-                    <p
-                      style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#000000;">
+                    <p class="mobile-content-p0d"
+                      style="Margin:0;padding-top:8px;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#000000;">
                       Так как я уже имела дело с HTML и CSS, <br>
                       то в принципе никаких трудностей у меня <br>
                       не возникло. Хотелось бы просто указать <br>
@@ -578,18 +585,16 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
             </table>
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center" style="padding-top: 0px; padding-bottom: 0px; margin-top: 0px">
                  <!-- таблица -->
-                 <!--закомментировано
                    <tr>
                     <td align="center" bgcolor="#ffffff" width="560" style="padding-top: 0px; padding-bottom: 0px; border-radius: 0px 0px 20px 20px;">
                       <table cellpadding="0" cellspacing="0" border="0" width="560" align="center" style="padding-top: 0px; padding-bottom: 0px;">
                         <!--Кнопка на все мероприятия-->
                           <!-- Кнопка -->
-                          <!--закомментировано
                             <tr>
                               <td align="center" style="Margin:0;padding-bottom:48px;padding-left:35px;padding-right:37px;padding-top:48px;">
-                                      <span style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:193px;">
+                                      <span class="button-border" style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
 
-                                        <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:193px;text-align:center;">Записаться на курс</a>
+                                        <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:auto;text-align:center;">Записаться на курс</a>
                                       </span>
                               </td>
                             </tr>
@@ -769,7 +774,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                    </tr>
                 </table>
                 <!--[if mso]></td></tr></table><![endif]-->
-                <!--закомментировано
 
                 <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
                 bgcolor="#ffffff" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; ">
@@ -783,7 +787,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
               <!--1 преимущество-->
-              <!--закомментировано
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
                 bgcolor="#ffffff" style="padding-top: 0px; padding-bottom: 24px; padding-right: 0px;  ">
                 <tr>
@@ -804,7 +807,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
             </table>
 
             <!--2 преимущество-->
-            <!--закомментировано
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
                 bgcolor="#ffffff" style="padding-top: 0px; padding-bottom: 24px; padding-right: 0px; ">
                 <tr>
@@ -813,7 +815,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                      <a target="_blank" href="https://#"> <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/icon2.1.png" alt="Только актуальные знания" title="Только актуальные знания" width="40" height="40" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/></a>
                    </td>
 
-                  <td  align="left" 
+                  <td  align="left"  class="mobile-content-p0с"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 20px; padding-left: 16px;">
                     <p
                       style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#000000;">
@@ -825,7 +827,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 </tr>
             </table>
             <!--3 преимущество -->
-            <!--закомментировано
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
                 bgcolor="#ffffff" style="padding-top: 0px; padding-bottom: 24px; padding-right: 0px;">
                 <tr>
@@ -856,12 +857,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
         <!--Подвал-->
+        <!--закомментировано
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
             bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
               <tr>
                 <td align="center"
                 style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; " >
                   <!--Подвал-->
+                  <!--закомментировано
             <table cellpadding="0" cellspacing="0" class="content" align="center"
             style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;table-layout:fixed !important;width:100%;">
             <tr>
@@ -871,6 +874,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     <td align="left" bgcolor="#FFFFFF"
                       style="Margin:0;padding-bottom:10px;padding-top:25px;padding-left:30px;padding-right:50px;background-color:#3A3F4а; border-radius: 20px 20px 0px 0px;">
                       <!--[if mso]><table style="width:540px;" cellpadding="0" cellspacing="0"><tr><td style="width:133px;" valign="top"><![endif]-->
+                        <!--закомментировано
                       <table cellpadding="0" cellspacing="0" class="content-left" align="left"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
                         <tr>
@@ -930,6 +934,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         </tr>
                       </table>
                       <!--[if mso]></td><td style="width:0px;"></td><td style="width:136px;" valign="top"><![endif]-->
+                        <!--закомментировано
                       <table cellpadding="0" cellspacing="0" class="content-right" align="right"
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;">
                         <tr>
@@ -984,6 +989,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         </tr>
                       </table>
                       <!--[if mso]></td></tr></table><![endif]-->
+                      <!--закомментировано
                     </td>
                   </tr>
                   
@@ -995,6 +1001,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
             </table>
 
             <!--Блок про пользовательское соглашение-->
+            <!--закомментировано
             <table class="content-body" align="center" cellpadding="0" cellspacing="0" bgcolor="#ffffff" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:583px;">
               <tr>
                 <td align="left" bgcolor="#F6F6F6"
@@ -1005,6 +1012,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
 
             <!--Блок про пользовательское соглашение-->
+            <!--закомментировано
             <table class="content-body" align="center" cellpadding="0" cellspacing="0" bgcolor="#ffffff" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;">
               <tr>
                 <td align="left" bgcolor="#FFFFFF"
