--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -63,9 +63,30 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
         font-size: 16px !important;
         line-height: 120% !important;
       }
+
+      .mobile-content-p0 {
+        padding-bottom: 20px !important;
+      }
+
+      .mobile-content-p0w {
+        padding-right: 16px !important;
+      }
+
+      .mobile-content-p0t {
+        padding-right: 16px !important;
+        padding-left: 16px !important;
+        padding-bottom: 16px !important;
+      }
+
+      .mobile-content-p0x {
+        padding-right: 41px !important;
+        padding-left: 41px !important;
+        width: 206px !important
+      }
       
       .button-border {
         display: block !important;
+
       }
 
       a.button {
@@ -334,7 +355,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
               <!--Блок с планом вебинара-->
               <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
-                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
+                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 16px; ">
                 <tr>
                   <td align="left"
                     style="padding-top: 32px; padding-bottom: 16px; padding-right: 0px;  color:#FFFFFF">
@@ -344,13 +365,13 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 </tr>
               </table>
               <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
-                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
+                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; ">
                 <tr>
-                  <td width="30" align="left" align="top"
-                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
+                  <td class="mobile-content-p0" width="30" align="left" align="top"
+                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 16px;">
                     <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/Ellipse1.png" alt="Кто такой frontend-разработчик?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
-                  <td align="left" align="top"
+                  <td class="mobile-content-p0w" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
                     <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#FFFFFF;">
                       Кто такой frontend-разработчик?</p>
@@ -359,13 +380,13 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
               </table>
 
               <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
-                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
+                bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px;">
                 <tr>
-                  <td width="30" align="left" align="top"
-                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
+                  <td class="mobile-content-p0" width="30" align="left" align="top"
+                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 16px;">
                     <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/Polygon1.png" alt="Какие навыки сейчас востребованы?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
-                  <td align="left"
+                  <td class="mobile-content-p0w" align="left"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
                     <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#FFFFFF;">
                       Какие навыки сейчас востребованы?</p>
@@ -376,8 +397,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
               <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
                 bgcolor="#0C379B" style="padding-top: 0px; padding-bottom: 40px; padding-right: 0px;">
                 <tr>
-                  <td width="30" align="left" align="top"
-                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
+                  <td class="mobile-content-p0" width="30" align="left" align="top"
+                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 16px;">
                     <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/Rectangle19.png" alt="Как устроиться в компанию после обучения?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
                   <td align="left"
@@ -423,7 +444,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       </td>
                     </tr>
                     <tr>
-                      <td align="center"
+                      <td class="mobile-content-p0t" align="center"
                       style="padding-top: 0px; padding-bottom: 32px; padding-right: 0px;">
                         <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#141414;">
                           Frontend-разработчик компании Cats Development</p>
@@ -436,8 +457,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           bgcolor="">
                           <!-- Кнопка -->
                             <tr>
-                              <td align="center" style="Margin:0;padding-bottom:25px;padding-left:35px;padding-right:37px;padding-top:0px;">
-                                      <span class="button-border" style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
+                              <td class="mobile-content-p0x" align="center" style="Margin:0;padding-bottom:0px;padding-left:35px;padding-right:37px;padding-top:0px;">
+                                      <span class="button-border " style="border-style:solid;border-color:#2CB543;background:#FF4B33;border-width:0px;display:inline-block;border-radius:5px;width:auto;">
 
                                         <a href="https://#" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'trebuchet ms', tahoma, sans-serif;font-size:18px;color:#FFFFFF;border-style:solid;border-color:#FF4B33;border-width:8px 20px;display:inline-block;background:#FF4B33;border-radius:5px;font-weight:normal;font-style:normal;line-height:21px;width:auto;text-align:center;">Зарегистрироваться на&nbsp;вебинар</a>
                                       </span>
@@ -450,12 +471,12 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
             <!--блок с картинкой -->
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
-            bgcolor="#FFFFFF" style="padding-top: 40px; padding-bottom: 0px; padding-right: 0px;">
+            bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
               <tr>
                 <td align="center"
                 style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
                   <table cellpadding="0" cellspacing="0" border="0" width="100%" align="center"
-                  bgcolor="#FFFFFF" style="padding-top: 16px; padding-bottom: 0px; padding-right: 0px;">
+                  bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
                     <tr>
                       <td width="100%" align="center" align="top"
                       style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
