--- a/3-promo/index.html
+++ b/3-promo/index.html
@@ -96,6 +96,10 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
          padding-right: 0px  !important;
       }
 
+      .mobile-content-p0to {
+         padding-top: 37px  !important;
+      }
+
       .mobile-content-p0j {
          padding-right: 16px  !important;
       }
@@ -496,7 +500,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <table cellpadding="0" cellspacing="0" class="content-right mobile-100" align="right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;">
                         <tbody>
                           <tr>
-                            <td align="left" style="padding:0;Margin:0;width:260px;">
+                            <td class="mobile-content-p0to" align="left" style="padding:0;Margin:0;width:260px;">
                               <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                                 <tbody>
                               <tr>
@@ -585,7 +589,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <table cellpadding="0" cellspacing="0" class="content-right mobile-100" align="right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;">
                         <tbody>
                           <tr>
-                            <td align="left" style="padding:0;Margin:0;width:260px;padding-top:15px;">
+                            <td class="mobile-content-p0to" align="left" style="padding:0;Margin:0;width:260px;padding-top:15px;">
                               <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                                 <tbody>
                               <tr>
